--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -1,10 +1,3 @@
-<!--
- * @Author: ji.xuyu
- * @Date: 2020-02-06 14:40:44
- * @LastEditors  : ji.xuyu
- * @LastEditTime : 2020-02-10 13:28:55
- * @Description: file content
- -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,10 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <!-- <link rel="icon" href="<%= BASE_URL %>logo.png"> -->
   <title>焱皓</title>
+  <link rel="icon" href="./font.png" type="image/x-icon">
   <link rel="stylesheet" href="https://lib.baomitu.com/element-ui/2.12.0/theme-chalk/index.css">
-
 </head>
 
 <body>
